.golden/7717561110821329704/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:39:
  |
7 | main = putStrLn [f|{truncate number:.3o}|]
  |                                       ^
Type incompatible with precision (.3), use any of {'e', 'E', 'f', 'F', 'g', 'G', 'n', 's', '%'} or remove the precision field.

    • In the quasi-quotation: [f|{truncate number:.3o}|]
  |
7 | main = putStrLn [f|{truncate number:.3o}|]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^
